fix(navbar): enable dropdown visibility

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -17,7 +17,7 @@ html, body {
 html[dir="rtl"] {
   .container,
   .container-fluid {
-    overflow-x: hidden;
+    overflow: visible; // fixed for lang and brightness menus to be visible
   }
 
   .row {
